# fx-cpp-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  Component.cpp  Json.h  README.md  Runtime.cpp  Runtime.h  component.json  component.lua  deploy.sh  premake5.lua
.github/workflows/: ci_build.yml
.github/workflows/ci/: build_linux.sh
cfx/: IScriptHostWithBookmarks.h  IScriptMemInfoRuntime.h  IScriptWarningRuntime.h  fxScripting.h
impl/: Emit.inl  Events.inl  Exports.inl  Lifecycle.inl  Statebags.inl  Timers.inl
include/: CppComponentHost.h  IScriptRuntimeHandler.h  IScriptStackWalkVisitor.h  IScriptStackWalkingRuntime.h  IScriptTickRuntimeWithBookmarks.h  Local.h  OMClass.h  fxNativeContext.h  fxScripting.h
resource_sdk/: Async.h  Events.h  Natives.h  Resource.h  SDK.h  Statebags.h  Types.h  msgpack.h
resource_sdk/Coroutine/: Coroutine.h
resource_sdk/Interop/: MsgPackDeserializer.h  MsgPackSerializer.h  Types.h
resource_sdk/Native/: Native.h
src/: Component.cpp  CppScriptRuntime.cpp  Json.h  KVP.h  Resource.h  Runtime.cpp  Runtime.h  WASM.h
src/Coroutine/: Coroutine.h
src/Impl/: Async.inl  Emit.inl  Events.inl  Lifecycle.inl  Timers.inl
src/Interop/: Events.h  Exports.h  MsgPackDeserializer.h  MsgPackSerializer.h  Types.h
src/WASM/: Context.h  Entry.h  Events.h
tests/: fxmanifest.lua  server.cpp
tools/: build  deploy  deploy.sh
tools/code-gen/: build.py
tools/example/: fxmanifest.lua  server.cpp
